--- a/analysis/test.ipynb
+++ b/analysis/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6c4cdfdd",
+   "id": "dd4eeb1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "353487f5",
+   "id": "e88ed7f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "7b003eff",
+   "id": "04ba9704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "581a65bb",
+   "id": "b6be56cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "a12ebdb5",
+   "id": "0c622077",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "42649e86",
+   "id": "6c7d143e",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "598ec5ee",
+   "id": "0fddb21a",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "9437920c",
+   "id": "dee033d0",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "d23c7b52",
+   "id": "908a3d39",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "522a6ba1",
+   "id": "d28ad1a6",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "e2262bf7",
+   "id": "4a27abff",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "866f7397",
+   "id": "efda8646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "63d229da",
+   "id": "203f587b",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "0cdab9bf",
+   "id": "42e037f8",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "8c53fcd9",
+   "id": "2acbbb9b",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "6803c16d",
+   "id": "dcbe4b43",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "50806861",
+   "id": "527c6576",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "1c79e52a",
+   "id": "480e83d8",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "627a3111",
+   "id": "a554e91e",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a12db10a",
+   "id": "26f0384d",
    "metadata": {},
    "outputs": [
     {
@@ -625,8 +625,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "id": "0673dc83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(12).reshape(3, -1)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "9b43d133",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.6, -0.5, -0.4, -0.3],\n",
+       "       [-0.2, -0.1,  0. ,  0.1],\n",
+       "       [ 0.2,  0.3,  0.4,  0.5]])"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.arange(-6, 6).reshape(3, -1)/10\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "0287c108",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0. , -0.6],\n",
+       "       [ 1. , -0.5],\n",
+       "       [ 2. , -0.4],\n",
+       "       [ 3. , -0.3],\n",
+       "       [ 4. , -0.2],\n",
+       "       [ 5. , -0.1],\n",
+       "       [ 6. ,  0. ],\n",
+       "       [ 7. ,  0.1],\n",
+       "       [ 8. ,  0.2],\n",
+       "       [ 9. ,  0.3],\n",
+       "       [10. ,  0.4],\n",
+       "       [11. ,  0.5]])"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.column_stack((a.flatten(), b.flatten()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "99723751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0. , -0.6],\n",
+       "       [ 1. , -0.5],\n",
+       "       [ 2. , -0.4],\n",
+       "       [ 3. , -0.3],\n",
+       "       [ 4. , -0.2],\n",
+       "       [ 5. , -0.1],\n",
+       "       [ 6. ,  0. ],\n",
+       "       [ 7. ,  0.1],\n",
+       "       [ 8. ,  0.2],\n",
+       "       [ 9. ,  0.3],\n",
+       "       [10. ,  0.4],\n",
+       "       [11. ,  0.5]])"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.transpose(np.vstack((a.flatten(), b.flatten())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "a1dec7ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0. ,  1. ,  2. ,  3. ,  4. ,  5. ,  6. ,  7. ,  8. ,  9. , 10. ,\n",
+       "        11. ],\n",
+       "       [-0.6, -0.5, -0.4, -0.3, -0.2, -0.1,  0. ,  0.1,  0.2,  0.3,  0.4,\n",
+       "         0.5]])"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((a.flatten(), b.flatten()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1cbb0aeb",
+   "id": "9d641fd7",
    "metadata": {},
    "outputs": [],
    "source": []
